--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,29 @@
-Flask==2.3.3
+Flask~=3.1.0
 Flask-SQLAlchemy==3.1.1
 Flask-Migrate==3.1.0
 Flask-Reuploaded==1.2.0
 Flask-Cors==3.0.10
-Flask-JWT-Extended==4.4.4
+Flask-JWT-Extended~=4.7.1
 Flask-Admin==1.6.1
 Werkzeug>=3.0.0
-click==8.1.3
+click~=8.1.8
 gunicorn==20.1.0
-pytest==7.0.1
+pytest~=8.4.2
 psycopg2-binary==2.9.9
 PyMySQL==1.1.0
 python-dotenv==1.0.1
+SQLAlchemy~=2.0.43
+colorama~=0.4.6
+pip~=24.3.1
+Jinja2~=3.1.5
+Pygments~=2.19.2
+MarkupSafe~=3.0.2
+typing_extensions~=4.15.0
+blinker~=1.9.0
+itsdangerous~=2.2.0
+pluggy~=1.6.0
+iniconfig~=2.1.0
+greenlet~=3.2.4
+packaging~=25.0
+setuptools~=75.8.0
+PyJWT~=2.10.1
